# camzilla

./: .env.example  .gitignore  AGENTS.md  CAMERA_NOTES.md  LICENSE  README.md  compose.dev.yaml  compose.yaml
.github/workflows/: ci.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  alerts.py  backup.py  catalog.py  cli.py  config.py  contracts.py  geometry.py  inference.py  main.py  media.py  model_registry.py  persistence.py  pipeline.py  ptz.py  queueing.py  scheduling.py  selection.py  transport.py  validation.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_phase3_state.py  0002_semantic_categories.py
backend/tests/: test_alerts.py  test_api.py  test_backup.py  test_catalog.py  test_contracts.py  test_geometry.py  test_inference.py  test_live_camera_smoke.py  test_media.py  test_model_download.py  test_model_manifest.py  test_persistence.py  test_pipeline.py  test_ptz.py  test_queueing.py  test_restream_source.py  test_scheduling.py  test_schema_compatibility.py  test_selection.py  test_transport.py  test_ultralytics_contract.py  test_validation.py
cam_info/: .env.example  README.md  onvif_stream.py  ptz_control.py  record_camera.sh  view_camera.sh
doc/: PRD-home-security-ai-alerts.md  design-doc-home-security-ai-alerts.md  implementation-plan.md  third-party-notices.md
doc/adr/: 0001-video-delivery-and-metadata.md  0002-inference-contract-and-backpressure.md  0003-trusted-lan-pre-auth.md
frontend/: Dockerfile  default.conf  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: viewer.spec.ts
frontend/src/: AlertStatus.tsx  App.tsx  CategoryMultiSelect.tsx  HistoryAndRules.tsx  InferenceSelector.tsx  PtzControls.tsx  api.ts  main.tsx  overlay.test.ts  overlay.ts  style.css  types.ts
infra/go2rtc/: Dockerfile  go2rtc.yaml
models/: manifest.yaml
scripts/: download-model.py  security-check.sh
